# glow-home

./: .gitignore  README.md  esp32-01.yml  esp32-02.yml  esp32-03.yml  esp32_ip120.yml  esp32cam-02.yml  esp32cam-03.yml  gimbal-remote.yml  heltec32-01.yml  heltec32-02.yml  heltec32-RMT.yml  heltec32-lights.yml  no-pan-tilt.yml  pan-tilt.yml  pan02.yml  rgb-control.yml  satan_in_heltec32.yml
common/: device_base.yml  effect_data.yml  expander.yml  gradient_data.yml  grid_effects.yml  hsv_test.yml  i2c.yml  lightEffects.yml  pantilt-control.yml  remote_servo.yml  secrets-template.yaml  strip_effects.yml  wifi.yml
custom/: glow.h  grid_effects.yml  strip_effects.yml
custom/glow/: Chroma.cpp  Chroma.h  Frame.h  Grid.h  HSVColor.cpp  HSVColor.h  Layer.h  RGBColor.cpp  RGBColor.h  base.h  catalog.cpp  catalog.h
custom/rgb_panels/: control.cpp  control.h  panel.h  rotary.h  show.cpp
esp32-custom/: platformio.ini
esp32-custom/src/arduino_port_expander/: arduino_port_expander.h
esp32-custom/src/display/: write_display.cpp  write_display.h
esp32-custom/src/glow/: Chroma.cpp  Chroma.h  Composite.h  DisplayANSI.h  ExchangeItem.h  Filer.h  Frame.cpp  Frame.h  Gradient.h  GradientPresets.h  GradientRange.h  Gradients.cpp  Gradients.h  Grid.cpp  Grid.h  HSVColor.cpp  HSVColor.h  HostLight.h  HostSpinner.h  HostTimer.h  Lamp.h  Layer.cpp  Layer.h  Light.h  Parser.cpp  Parser.h  Pixels.cpp  Pixels.h  Presets.h  Properties.cpp  Properties.h  RGBColor.cpp  RGBColor.h  Range.h  Scanner.h  ScannerPresets.h  Scene.h  Solid.h  Spinner.h  TestLight.cpp  (+11 more)
esp32-custom/src/old/: write_lights.cpp  write_lights.h
esp32-custom/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  GlowConfig.h  GlowConfig.h.in  Makefile  cmake_install.cmake  glow.cfg  glow.cpp  test.cfg
esp32-custom/test/include/: grid.h
esp32-custom/test/src/: grid.cpp
esp32-custom/test/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test.cfg  test_chroma.cpp  test_diagonal.cpp  test_grid.cpp  test_properties.cpp  test_spinner.cpp  testchromalib  testgridlib
